--- a/backend.native/build.gradle
+++ b/backend.native/build.gradle
@@ -209,8 +209,8 @@ targetList.each { target ->
             "-Dkonan.home=${project.parent.file('dist')}",
             "-Djava.library.path=${project.buildDir}/nativelibs"
         args('-output', project(':runtime').file("build/${target}Stdlib"), 
-            '-nolink', '-nopack', '-nostdlib','-ea',
-            '-target', target,
+            '-nopack', '-nostdlib','-ea',
+            '-produce', 'library', '-target', target,
             '-runtime', project(':runtime').file("build/${target}/runtime.bc"),
             '-properties', project(':backend.native').file('konan.properties'),
         project(':runtime').file('src/main/kotlin'), 
@@ -235,8 +235,8 @@ targetList.each { target ->
             "-Dkonan.home=${project.parent.file('dist')}",
             "-Djava.library.path=${project.buildDir}/nativelibs"
         args('-output', project(':runtime').file("build/${target}Start"), 
-            '-nolink', '-nopack', '-nostdlib', '-ea',
-            '-target', target,
+            '-nopack', '-nostdlib', '-ea',
+            '-produce', 'bitcode', '-target', target,
             '-library', project(':runtime').file("build/${target}Stdlib"),
             '-runtime', project(':runtime').file("build/${target}/runtime.bc"),
             '-properties', rootProject.konanPropertiesFile.canonicalPath,
