--- a/samples/csvparser/build.gradle
+++ b/samples/csvparser/build.gradle
@@ -33,7 +33,7 @@ void dumpCompilationTask(Task task) {
     println("nativeLibraries    : ${task.nativeLibraries}")
     println("linkerOpts         : ${task.linkerOpts}")
     println("noStdLib           : ${task.noStdLib}")
-    println("noLink             : ${task.noLink}")
+    println("produce            : ${task.produce}")
     println("noMain             : ${task.noMain}")
     println("enableOptimization : ${task.enableOptimization}")
     println("enableAssertions   : ${task.enableAssertions}")
