--- a/backend.native/konan.properties
+++ b/backend.native/konan.properties
@@ -15,10 +15,10 @@
 #
 
 # TODO: Do we need a $variable substitution mechanism here?
-llvmVersion = 3.9.0
 dependenciesUrl = http://download.jetbrains.com/kotlin/native
 
 # Mac OS X.
+llvmVersion.osx = 3.9.0
 llvmHome.osx = clang-llvm-3.9.0-darwin-macos
 targetToolchain.osx = clang-llvm-3.9.0-darwin-macos
 
@@ -79,6 +79,7 @@ osVersionMinFlagClang.ios_sim = -mios-simulator-version-min
 osVersionMin.ios_sim = 8.0
 
 # Linux x86-64.
+llvmVersion.linux = 3.9.0
 llvmHome.linux = clang-llvm-3.9.0-linux-x86-64
 targetToolchain.linux = target-gcc-toolchain-3-linux-x86-64/x86_64-unknown-linux-gnu
 
@@ -151,3 +152,22 @@ llvmLtoFlags.android_arm32 = -exported-symbol=Konan_main -emulated-tls
 targetSysRoot.android_arm32 = target-sysroot-21-android_arm32
 libffiDir.android_arm32 = libffi-3.2.1-2-android_arm32
 linkerKonanFlags.android_arm32 = -lm -latomic -lstdc++
+
+# Windows x86-64, based on mingw-w64.
+llvmVersion.mingw = 3.9.1
+llvmHome.mingw = msys2-mingw-w64-x86_64-gcc-6.3.0-clang-llvm-3.9.1-windows-x86-64
+targetToolchain.mingw = msys2-mingw-w64-x86_64-gcc-6.3.0-clang-llvm-3.9.1-windows-x86-64
+
+quadruple.mingw = x86_64-w64-mingw32
+targetSysRoot.mingw = msys2-mingw-w64-x86_64-gcc-6.3.0-clang-llvm-3.9.1-windows-x86-64
+libffiDir.mingw = libffi-3.2.1-mingw-w64-x86-64
+llvmLtoFlags.mingw = -exported-symbol=Konan_main
+llvmLtoOptFlags.mingw = -O3 -function-sections
+llvmLtoNooptFlags.mingw = -O1
+linkerKonanFlags.mingw = -static-libgcc -static-libstdc++ \
+  -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive,-Bdynamic
+linkerOptimizationFlags.mingw = -Wl,--gc-sections
+entrySelector.mingw = -Wl,--defsym,main=Konan_main
+dependencies.mingw = \
+    msys2-mingw-w64-x86_64-gcc-6.3.0-clang-llvm-3.9.1-windows-x86-64 \
+    libffi-3.2.1-mingw-w64-x86-64
