--- a/Interop/Runtime/build.gradle
+++ b/Interop/Runtime/build.gradle
@@ -28,7 +28,7 @@ apply plugin: 'kotlin'
 apply plugin: 'c'
 
 def javaHome = System.getProperty('java.home')
-def compilerArgsForJniIncludes = ["", "linux", "darwin"].collect { "-I$javaHome/../include/$it" } as String[]
+def compilerArgsForJniIncludes = ["", "linux", "darwin", "win32"].collect { "-I$javaHome/../include/$it" } as String[]
 
 model {
     components {
